--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -37,43 +37,43 @@ jobs:
           name: coverage
           path: coverage/
 
-  pr-visual-regression-test:
-    name: PR Visual Regression Test
-    timeout-minutes: 40
-    # This job intentionally does not use the `ubuntu-latest` image.
-    # An updated image could generate different snapshots, so we should explicitly update the image version.
-    runs-on: ubuntu-24.04
-    strategy:
-      matrix:
-        browser: ['chromium', 'firefox']
-        theme: ['light', 'dark']
-        density: ['default', 'regular', 'compact']
-    env:
-      CLARITY_VRT_BROWSER: ${{matrix.browser}}
-      CLARITY_VRT_THEME: ${{matrix.theme}}
-      CLARITY_VRT_DENSITY: ${{matrix.density}}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: '.nvmrc'
-      - name: Install Dependencies
-        run: npm ci
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps ${{matrix.browser}}
-      - name: Build Storybook
-        run: npm run _build:storybook
-      - name: Update Visual Snapshots
-        run: npx playwright test --update-snapshots
-      - name: Collect Changes
-        id: diff
-        run: |
-          git add .
-          git diff --cached --binary > visual-snapshot-changes-${{matrix.browser}}-${{matrix.theme}}-${{matrix.density}}.diff
-      - name: Upload Changes
-        uses: actions/upload-artifact@v4
-        with:
-          name: visual-snapshot-changes-${{matrix.browser}}-${{matrix.theme}}-${{matrix.density}}.diff
-          path: visual-snapshot-changes-${{matrix.browser}}-${{matrix.theme}}-${{matrix.density}}.diff
+  # pr-visual-regression-test:
+  #   name: PR Visual Regression Test
+  #   timeout-minutes: 40
+  #   # This job intentionally does not use the `ubuntu-latest` image.
+  #   # An updated image could generate different snapshots, so we should explicitly update the image version.
+  #   runs-on: ubuntu-24.04
+  #   strategy:
+  #     matrix:
+  #       browser: ['chromium', 'firefox']
+  #       theme: ['light', 'dark']
+  #       density: ['default', 'regular', 'compact']
+  #   env:
+  #     CLARITY_VRT_BROWSER: ${{matrix.browser}}
+  #     CLARITY_VRT_THEME: ${{matrix.theme}}
+  #     CLARITY_VRT_DENSITY: ${{matrix.density}}
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Setup Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version-file: '.nvmrc'
+  #     - name: Install Dependencies
+  #       run: npm ci
+  #     - name: Install Playwright Browsers
+  #       run: npx playwright install --with-deps ${{matrix.browser}}
+  #     - name: Build Storybook
+  #       run: npm run _build:storybook
+  #     - name: Update Visual Snapshots
+  #       run: npx playwright test --update-snapshots
+  #     - name: Collect Changes
+  #       id: diff
+  #       run: |
+  #         git add .
+  #         git diff --cached --binary > visual-snapshot-changes-${{matrix.browser}}-${{matrix.theme}}-${{matrix.density}}.diff
+  #     - name: Upload Changes
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: visual-snapshot-changes-${{matrix.browser}}-${{matrix.theme}}-${{matrix.density}}.diff
+  #         path: visual-snapshot-changes-${{matrix.browser}}-${{matrix.theme}}-${{matrix.density}}.diff
