--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -4,6 +4,9 @@ on:
     workflows: [PR Build]
     types:
       - completed
+permissions:
+  contents: read
+  actions: read 
 jobs:
   pr-preview:
     timeout-minutes: 10
@@ -34,6 +37,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version-file: '.nvmrc'
+      - name: Download docs artifact from triggering run
+        uses: actions/download-artifact@v4
+        with:
+          name: docs                           # EXACT artifact name
+          run-id: ${{ github.event.workflow_run.id }}
+          path: dist/docs
+      - run: ls -la dist/docs
       - name: Download Docs Artifact
         id: download-docs
         uses: actions/download-artifact@v4
