--- a/.github/workflows/pr-preview.yml
+++ b/.github/workflows/pr-preview.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Download docs artifact from triggering run
         uses: actions/download-artifact@v4
         with:
-          name: docs # EXACT artifact name
+          name: docs
           run-id: ${{ github.event.workflow_run.id }}
           path: dist/docs
       - run: ls -la dist/docs
