--- a/.github/workflows/pr-visual-snapshot-update-bot.yml
+++ b/.github/workflows/pr-visual-snapshot-update-bot.yml
@@ -2,6 +2,8 @@ name: PR Visual Snapshot Update Bot
 on:
   workflow_run:
     workflows: [PR Build]
+permissions:
+  actions: read
 jobs:
   pr-visual-snapshot-update-bot:
     if: ${{github.event.workflow_run.conclusion == 'success'}}
