--- a/.github/workflows/pr-visual-snapshot-update-bot.yml
+++ b/.github/workflows/pr-visual-snapshot-update-bot.yml
@@ -4,6 +4,7 @@ on:
     workflows: [PR Build]
 permissions:
   actions: read
+  statuses: write
 jobs:
   pr-visual-snapshot-update-bot:
     if: ${{github.event.workflow_run.conclusion == 'success'}}
