--- a/.github/workflows/pr-visual-snapshot-update-bot.yml
+++ b/.github/workflows/pr-visual-snapshot-update-bot.yml
@@ -79,22 +79,37 @@ jobs:
 
           # set commit-sha for next step
           echo "commit-sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-      - name: Comment
-        if: ${{steps.diff.outputs.status == 'dirty'}}
-        uses: peter-evans/create-or-update-comment@v3
+      - name: Comment on the *base* PR (first-party only)
+        uses: actions/github-script@v7
         with:
-          token: ${{ github.token }}
-          issue-number: ${{ github.event.workflow_run.pull_requests[0].number }}
-          body: |
-            This PR introduces visual changes: ${{steps.push-changes.outputs.commit-sha}}
+          script: |
+            const wr = context.payload.workflow_run;
+            if (!wr.pull_requests || !wr.pull_requests[0]) {
+              core.info('No PR attached to triggering run. Skipping comment.');
+              return;
+            }
+            const { owner, name } = wr.repository;   // base repo of the triggering run
+            const issue_number = wr.pull_requests[0].number;
+    
+            const body = `
+            This PR introduces visual changes: ${process.env.COMMIT_SHA}
             If these changes are intended and correct, please cherry-pick the above commit to this PR.
-
-            ```
-            git checkout ${{steps.get-pr-event.outputs.sourceHeadBranch}}
-            git fetch ${{github.server_url}}/${{github.repository}}.git ${{steps.push-changes.outputs.commit-sha}}
-            git cherry-pick ${{steps.push-changes.outputs.commit-sha}}
+            
+            \`\`\`
+            git checkout ${wr.head_branch}
+            git fetch https://github.com/${owner.login}/${name}.git ${process.env.COMMIT_SHA}
+            git cherry-pick ${process.env.COMMIT_SHA}
             git push
-            ```
+            \`\`\`
+            `.trim();
+            await github.rest.issues.createComment({
+              owner: owner.login,
+              repo: name,
+              issue_number,
+              body,
+            });
+        env:
+          COMMIT_SHA: ${{ steps.push-changes.outputs.commit-sha }}
       - name: Fail if Visual Snapshots Changed
         if: ${{steps.diff.outputs.status == 'dirty'}}
         run: exit 1
