--- a/.github/workflows/pr-visual-snapshot-update-bot.yml
+++ b/.github/workflows/pr-visual-snapshot-update-bot.yml
@@ -79,17 +79,12 @@ jobs:
 
           # set commit-sha for next step
           echo "commit-sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-      - name: Comment on the *base* PR (first-party only)
+      - name: Comment
         uses: actions/github-script@v7
         with:
           script: |
-            const wr = context.payload.workflow_run;
-            if (!wr.pull_requests || !wr.pull_requests[0]) {
-              core.info('No PR attached to triggering run. Skipping comment.');
-              return;
-            }
-            const { owner, name } = wr.repository;   // base repo of the triggering run
-            const issue_number = wr.pull_requests[0].number;
+            const { owner, name } = context.payload.workflow_run.repository;   // base repo of the triggering run
+            const issue_number = context.payload.workflow_run.pull_requests[0].number;
     
             const body = `
             This PR introduces visual changes: ${process.env.COMMIT_SHA}
