--- a/.github/workflows/pr-visual-snapshot-update-bot.yml
+++ b/.github/workflows/pr-visual-snapshot-update-bot.yml
@@ -1,57 +1,111 @@
-name: PR Preview
+name: PR Visual Snapshot Update Bot
 on:
   workflow_run:
     workflows: [PR Build]
-    types:
-      - completed
 permissions:
   actions: read
+  contents: write
+  issues: write
+  pull-requests: write
 jobs:
-  pr-preview:
-    timeout-minutes: 10
+  pr-visual-snapshot-update-bot:
+    if: ${{github.event.workflow_run.conclusion == 'success'}}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          repo: ${{github.event.workflow_run.head_repository.full_name}}
+          ref: ${{github.event.workflow_run.head_sha}}
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: '.nvmrc'
+      - name: Install Dependencies
+        run: npm ci
       - name: Get PR Event
         id: get-pr-event
         uses: potiuk/get-workflow-origin@v1_5
         with:
           token: ${{secrets.GITHUB_TOKEN}}
           sourceRunId: ${{github.event.workflow_run.id}}
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          ref: ${{steps.get-pr-event.outputs.sourceHeadBranch}}
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version-file: '.nvmrc'
-      - name: Download Docs Artifact
-        id: download-docs
+      - name: Create Temp Directory for Diff Artifacts
+        run: mkdir -p ${{runner.temp}}/artifacts/
+      - name: Download Changes
         uses: actions/download-artifact@v4
         with:
-          pattern: docs
-          path: dist/docs
+          pattern: visual-snapshot-changes-*.diff
+          path: ${{runner.temp}}/artifacts/
           run-id: ${{github.event.workflow_run.id}}
           github-token: ${{ github.token }}
-      - name: Download Coverage Artifact
-        id: download-coverage
-        uses: actions/download-artifact@v4
-        with:
-          pattern: coverage
-          path: dist/docs/coverage
-          run-id: ${{github.event.workflow_run.id}}
-          github-token: ${{ github.token }}
-      - name: Check For Docs
-        id: check-for-docs
+      - name: Apply Changes
+        id: apply-changes
         run: |
-          if [ -d dist/docs ] && [ "$(ls -A dist/docs)" ]; then
-            echo "found=true" >> "$GITHUB_OUTPUT"
+          # apply changes
+          git apply ${{runner.temp}}/artifacts/visual-snapshot-changes-*.diff/visual-snapshot-changes-*.diff
+
+          # delete unused screenshots
+          npm run ts-node -- ./scripts/delete-unused-screenshots.ts
+      - name: Check for Changes
+        id: diff
+        run: |
+          git add .
+
+          if git diff-index --quiet HEAD
+          then
+            echo "status=clean" >> $GITHUB_OUTPUT
           else
-            echo "found=false" >> "$GITHUB_OUTPUT"
+            echo "status=dirty" >> $GITHUB_OUTPUT
           fi
-      - name: Deploy Docs Preview
-        if: ${{ steps.check-for-docs.outputs.found == 'true' }}
-        timeout-minutes: 5
+      - name: Push Changes
+        if: ${{steps.diff.outputs.status == 'dirty'}}
+        id: push-changes
+        run: |
+          repositoryUrl=${{github.server_url}}/${{github.repository}}.git
+          updateBranchName=visual-snapshot-update/pr-${{steps.get-pr-event.outputs.pullRequestNumber}}
+
+          # configure git
+          git config user.name "GitHub"
+          git config user.email "noreply@github.com"
+
+          # commit changes
+          git commit --message 'chore: update visual snapshots for `${{steps.get-pr-event.outputs.sourceHeadBranch}}`'
+
+          # push changes
+          git push $repositoryUrl HEAD:refs/heads/$updateBranchName --force
+
+          # delete branch (it's not needed, only the commit needs to be in the repo)
+          git push $repositoryUrl -d $updateBranchName
+
+          # set commit-sha for next step
+          echo "commit-sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+      - name: Comment
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const workflowRun = context.payload.workflow_run;
+            const { owner, name } = workflowRun.repository;   // base repo of the triggering run
+            const issue_number = workflowRun.pull_requests[0].number;
+
+            const body = `
+            This PR introduces visual changes: ${process.env.COMMIT_SHA}
+            If these changes are intended and correct, please cherry-pick the above commit to this PR.
+
+            \`\`\`
+            git checkout ${workflowRun.head_branch}
+            git fetch https://github.com/${owner.login}/${name}.git ${process.env.COMMIT_SHA}
+            git cherry-pick ${process.env.COMMIT_SHA}
+            git push
+            \`\`\`
+            `.trim();
+            await github.rest.issues.createComment({
+              owner: owner.login,
+              repo: name,
+              issue_number,
+              body,
+            });
         env:
-          NETLIFY_AUTH_TOKEN: ${{secrets.NETLIFY_AUTH_TOKEN}}
-        run: npx netlify-cli deploy --no-build --site ${{secrets.NETLIFY_SITE_NAME}} --alias ${{steps.get-pr-event.outputs.pullRequestNumber}}
+          COMMIT_SHA: ${{ steps.push-changes.outputs.commit-sha }}
+      - name: Fail if Visual Snapshots Changed
+        if: ${{steps.diff.outputs.status == 'dirty'}}
+        run: exit 1
