--- a/.github/workflows/pr-visual-snapshot-update-bot.yml
+++ b/.github/workflows/pr-visual-snapshot-update-bot.yml
@@ -80,32 +80,20 @@ jobs:
           # set commit-sha for next step
           echo "commit-sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
       - name: Comment
-        uses: actions/github-script@v7
+        if: ${{steps.diff.outputs.status == 'dirty'}}
+        uses: peter-evans/create-or-update-comment@v2
         with:
-          script: |
-            const workflowRun = context.payload.workflow_run;
-            const { owner, name } = workflowRun.repository;   // base repo of the triggering run
-            const issue_number = workflowRun.pull_requests[0].number;
-
-            const body = `
-            This PR introduces visual changes: ${process.env.COMMIT_SHA}
+          issue-number: ${{steps.get-pr-event.outputs.pullRequestNumber}}
+          body: |
+            This PR introduces visual changes: ${{steps.push-changes.outputs.commit-sha}}
             If these changes are intended and correct, please cherry-pick the above commit to this PR.
 
-            \`\`\`
-            git checkout ${workflowRun.head_branch}
-            git fetch https://github.com/${owner.login}/${name}.git ${process.env.COMMIT_SHA}
-            git cherry-pick ${process.env.COMMIT_SHA}
+            ```
+            git checkout ${{steps.get-pr-event.outputs.sourceHeadBranch}}
+            git fetch ${{github.server_url}}/${{github.repository}}.git ${{steps.push-changes.outputs.commit-sha}}
+            git cherry-pick ${{steps.push-changes.outputs.commit-sha}}
             git push
-            \`\`\`
-            `.trim();
-            await github.rest.issues.createComment({
-              owner: owner.login,
-              repo: name,
-              issue_number,
-              body,
-            });
-        env:
-          COMMIT_SHA: ${{ steps.push-changes.outputs.commit-sha }}
+            ```
       - name: Fail if Visual Snapshots Changed
         if: ${{steps.diff.outputs.status == 'dirty'}}
         run: exit 1
